Fix element collapse issues
Removed unused outer section
Adjust margin and height for introduction section

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -134,10 +134,15 @@ nav > button:active {
 }
 
 /*Overview*/
+
+.introduction {
+    min-height: 25vh;
+}
+
 .introduction-sections {
     padding: 16px 24px;
-    margin: 24px 24px;
-    height: 25vh;
+    margin: 24px;
+    min-height: 25vh;
     display: flex;
     justify-content: space-around;
     align-content: center;
@@ -282,7 +287,7 @@ footer {
     }
 
     .introduction-sections {
-        padding: 16px 24px;
+        padding: 24px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
